<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.onboarding.OnboardingFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:orientation="vertical"
        style="@style/Content"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:orientation="vertical"
        style="@style/Content"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/btn_skip"
        style="@style/Content.Big"
        android:text="@string/onboarding_skip"
        android:shadowColor="#85A3C3"
        android:shadowDx="2"
        android:shadowDy="4"
        android:shadowRadius="1"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/onboarding_image"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:scaleType="fitCenter"
        android:src="@drawable/img_onboarding_1"
        android:contentDescription="@string/onboarding_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_skip"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/onboarding_title"
        style="@style/Content.Title"
        android:layout_marginTop="12dp"
        android:text="@string/onboarding_title"
        android:shadowDx="2"
        android:shadowDy="5"
        android:shadowRadius="3"
        android:shadowColor="#001327"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_image"
        app:layout_constraintEnd_toStartOf="@id/guideline_right" />

    <TextView
        android:id="@+id/onboarding_subtitle"
        style="@style/Content.SubTitle"
        android:layout_width="0dp"
        android:layout_marginTop="12dp"
        android:text="@string/onboarding_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_title"
        app:layout_constraintEnd_toStartOf="@id/guideline_right" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_onboarding_button"
        android:layout_marginBottom="32dp"
        android:text="@string/onboarding_next"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>