<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.home.HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            style="@style/Content.Text.Big"
            android:text="@string/saved_picture" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:orientation="vertical"
        style="@style/Content"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:orientation="vertical"
        style="@style/Content"
        app:layout_constraintGuide_percent="0.9" />

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll"
        style="@style/RowContent"
        android:scrollbars="none"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent">

        <RadioGroup
            android:id="@+id/radio_group"
            style="@style/Content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_bathroom"
                style="@style/Content.Text.Small"
                android:layout_height="32dp"
                android:paddingHorizontal="12dp"
                android:layout_marginStart="16dp"
                android:checked="true"
                android:text="@string/bathroom"
                android:textColor="@drawable/bg_radio_button_text_color"
                android:textAlignment="center"
                android:button="@null"
                android:background="@drawable/bg_radio_button_background"/>

            <RadioButton
                android:id="@+id/rb_bedroom"
                style="@style/Content.Text.Small"
                android:layout_height="32dp"
                android:paddingHorizontal="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/bedroom"
                android:textColor="@drawable/bg_radio_button_text_color"
                android:textAlignment="center"
                android:button="@null"
                android:background="@drawable/bg_radio_button_background" />

            <RadioButton
                android:id="@+id/rb_dinning"
                style="@style/Content.Text.Small"
                android:layout_height="32dp"
                android:paddingHorizontal="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/dining_room"
                android:textColor="@drawable/bg_radio_button_text_color"
                android:textAlignment="center"
                android:button="@null"
                android:background="@drawable/bg_radio_button_background" />

            <RadioButton
                android:id="@+id/rb_kitchen"
                style="@style/Content.Text.Small"
                android:layout_height="32dp"
                android:paddingHorizontal="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/kitchen"
                android:textColor="@drawable/bg_radio_button_text_color"
                android:textAlignment="center"
                android:button="@null"
                android:background="@drawable/bg_radio_button_background" />

            <RadioButton
                android:id="@+id/rb_livingroom"
                style="@style/Content.Text.Small"
                android:layout_height="32dp"
                android:paddingHorizontal="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/living_room"
                android:textColor="@drawable/bg_radio_button_text_color"
                android:textAlignment="center"
                android:button="@null"
                android:background="@drawable/bg_radio_button_background" />

        </RadioGroup>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/tv_latest"
        style="@style/Content.Text.Big"
        android:text="@string/latest"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_scroll" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_gallery"
        style="@style/RowContent"
        android:text="@string/latest"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_latest"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/card_gallery"
        tools:itemCount="15"
        tools:orientation="vertical"
        tools:spanCount="5"/>

    <ImageView
        android:id="@+id/empty_image"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:src="@drawable/img_empty_picture"
        android:contentDescription="@string/onboarding_image"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/horizontal_scroll"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/empty_title"
        style="@style/Content.Text.Big.Red"
        android:text="@string/empty_gallery"
        android:shadowColor="@color/blue_600"
        android:shadowDy="12"
        android:shadowRadius="8"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/empty_image"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        tools:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/view_loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="@color/white_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            style="@style/Content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>