<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Parent"
    tools:context=".ui.camera.CameraValidateFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid"
        android:orientation="vertical"
        style="@style/Content"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/iv_camera_result"
        style="@style/Parent"
        android:contentDescription="@string/captured_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:src="@drawable/img_camera_template" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_proceed"
        style="@style/CircleButton"
        android:background="@drawable/bg_camera_validate_button"
        android:text="@string/proceed"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_mid"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        style="@style/CircleButton"
        android:background="@drawable/bg_camera_validate_button"
        android:text="@string/cancel"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toEndOf="@id/guideline_mid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>